<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

	<!-- 采集设置 -->
     <LinearLayout  
        android:id="@+id/linearLayout1"  
        android:layout_width="match_parent"  
        android:layout_height="wrap_content"  
        android:orientation="vertical"  
        android:paddingBottom="5dp"  
        android:paddingLeft="25dp"  
        android:paddingTop="15dp" >  
  
        <TextView
            android:id="@+id/menu_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_tab_finger"
            android:textColor="@color/black"
            android:textSize="18dp" />
            
    </LinearLayout>  
    <View
	  android:layout_width="fill_parent"
	  android:layout_height="2dip"
	  android:background="#FF000000"/>
  
	<AbsoluteLayout
	  android:layout_width="wrap_content"
	  android:layout_height="wrap_content">
	  
	  <TextView 
	       android:layout_width="wrap_content" 
	       android:text="采集时长(秒):" 
	       android:layout_height="wrap_content" 
	       android:layout_y="20dip" 
	       android:layout_x="50dip">
	       </TextView>

	   <TextView
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:layout_x="70dip"
	       android:layout_y="80dip"
	       android:text="分类数量:"
	       android:paddingRight="2dp" >

	       </TextView>
	       
	   <EditText
	       android:layout_width="100px" 
	       android:layout_height="wrap_content" 
	       android:id="@+id/colTime" 
	       android:layout_y="10dip" 
	       android:layout_x="150dip">
	       </EditText>
	   <EditText
	       android:layout_width="100px" 
	       android:layout_height="wrap_content" 
	       android:id="@+id/etCluster" 
	       android:layout_y="70dip" 
	       android:layout_x="150dip">
	       </EditText>
	</AbsoluteLayout>
	
	<!-- 定位设置 -->
	<LinearLayout  
        android:layout_width="match_parent"  
        android:layout_height="wrap_content"  
        android:orientation="vertical"  
        android:paddingBottom="5dp"  
        android:paddingLeft="25dp"  
        android:paddingTop="15dp" >  
  
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_tab_location"
            android:textColor="@color/black" 
            android:textSize="18dp" />
            
    </LinearLayout>
    
    <View
	  android:layout_width="fill_parent"
	  android:layout_height="2dip"
	  android:background="#FF000000"/>
    
    <AbsoluteLayout
	  android:layout_width="wrap_content"
	  android:layout_height="wrap_content">
	  
	  <TextView 
	       android:layout_width="wrap_content" 
	       android:text="匹配k值:" 
	       android:layout_height="wrap_content" 
	       android:id="@+id/tvName2" 
	       android:layout_y="20dip" 
	       android:layout_x="80dip">
	       </TextView>
	   <EditText
	       android:layout_width="100px" 
	       android:layout_height="wrap_content" 
	       android:id="@+id/etKNum" 
	       android:layout_y="10dip" 
	       android:layout_x="150dip">
	       </EditText>
	</AbsoluteLayout>
	
    <!-- 其他设置 -->
	<LinearLayout  
        android:layout_width="match_parent"  
        android:layout_height="wrap_content"  
        android:orientation="vertical"  
        android:paddingBottom="5dp"  
        android:paddingLeft="25dp"  
        android:paddingTop="15dp">  
  
        <TextView  
            android:layout_width="wrap_content"  
            android:layout_height="wrap_content"  
            android:text="@string/setting_tab_other"  
            android:textColor="@color/black"
            android:textSize="18dp" />  
            
    </LinearLayout>
    
    <View
	  android:layout_width="fill_parent"
	  android:layout_height="2dip"
	  android:background="#FF000000"/>
    
    <AbsoluteLayout
	  android:layout_width="wrap_content"
	  android:layout_height="wrap_content">
	  
	   <TextView 
	       android:layout_width="wrap_content" 
	       android:text="是否启用索引:" 
	       android:layout_height="wrap_content" 
	       android:layout_y="20dip" 
	       android:layout_x="40dip">
	       </TextView>
	   <EditText
	       android:layout_width="100px" 
	       android:layout_height="wrap_content" 
	       android:id="@+id/etIfIndex" 
	       android:layout_y="10dip" 
	       android:layout_x="150dip">
	       </EditText>
	  <TextView 
	       android:layout_width="wrap_content" 
	       android:text="楼层:" 
	       android:layout_height="wrap_content" 
	       android:layout_y="80dip" 
	       android:layout_x="100dip">
	       </TextView>
	   <EditText
	       android:layout_width="100px" 
	       android:layout_height="wrap_content" 
	       android:id="@+id/etFloor" 
	       android:layout_y="70dip" 
	       android:layout_x="150dip">
	       </EditText>
	</AbsoluteLayout>
	<!-- 操作按钮 -->

    <LinearLayout  
        android:layout_width="match_parent"  
        android:layout_height="wrap_content"  
        android:orientation="horizontal" 
        android:layout_gravity="center"  
        android:paddingTop="15dp"
        android:paddingLeft="55dp"   >  
  
        <Button 
	       android:layout_width="wrap_content" 
	       android:text="保存" 
           android:width="150px"
	       android:layout_height="wrap_content" 
	       android:id="@+id/btnSave" >
	       </Button>
	       
	   <Button
	       android:id="@+id/btnReset"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:text="重置"
	       android:width="150px" >

	       </Button>
    </LinearLayout>  
	
</LinearLayout>